--- a/About_Me.html
+++ b/About_Me.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>
 <body>
     
@@ -14,11 +16,13 @@
         <li><a href="Four_Year_Plan.html">Four Year Plan</a></li>
         <li><a href="Link_To_Digital_File.html">Digital File</a></li>
         <li><a href="Letter_Of_Recommendation.html">Letter Of Recommendation</a></li>
-        <li><a href="Link_To_Digital_File.html">Digital File</a></li>
+        <li><a href="Resume.html">Resume</a></li>
         <li><a href="Contact_Me.html">Contact Me</a></li>
     </ul>
 
     <h1>Learn about me</h1>
+
+    <img class="col-12" alt="Picture of CART" src="images/Cart picture for about me.jpg"/>
 
     <p>
         
