--- a/Home_Content_Overview.html
+++ b/Home_Content_Overview.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>
 <body>
 
@@ -14,13 +16,15 @@
         <li><a href="Four_Year_Plan.html">Four Year Plan</a></li>
         <li><a href="Link_To_Digital_File.html">Digital File</a></li>
         <li><a href="Letter_Of_Recommendation.html">Letter Of Recommendation</a></li>
-        <li><a href="Link_To_Digital_File.html">Digital File</a></li>
+        <li><a href="Resume.html">Resume</a></li>
         <li><a href="Contact_Me.html">Contact Me</a></li>
     </ul>
 
-    <h1>My Personal Portfolio Website</h1>
+    <h1 class="col-12">My Personal Portfolio Website</h1>
 
     <p>Welcome to my Personal Website Portfolio!  If you want to look around and see what you can find on the website that may be interesting to you go ahead.  I have projects and other things on this website that you might find interesting. There is links that you can look through to find different things about me. </p>
+
+    <img class="col-12" alt="Portfolio At Desk" src="Images/Portfolio home picture.jpeg"/>
 
 </body>
 </html>
