--- a/Letter_Of_Recommendation.html
+++ b/Letter_Of_Recommendation.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>
 <body>
     
@@ -14,10 +16,13 @@
         <li><a href="Four_Year_Plan.html">Four Year Plan</a></li>
         <li><a href="Link_To_Digital_File.html">Digital File</a></li>
         <li><a href="Letter_Of_Recommendation.html">Letter Of Recommendation</a></li>
-        <li><a href="Link_To_Digital_File.html">Digital File</a></li>
+        <li><a href="Resume.html">Resume</a></li>
         <li><a href="Contact_Me.html">Contact Me</a></li>
     </ul>
 
+    <img class="col-12" alt="Placeholder" src="placeholder"/>
+
+    
     <h1>My letter of recommendation</h1>
 
     <p>N/A right now I am working on getting the letter</p>
