--- a/About_Me.html
+++ b/About_Me.html
@@ -22,7 +22,7 @@
 
     <h1>Learn about me</h1>
 
-    <img class="col-12" alt="Picture of CART" src="images/Cart picture for about me.jpg"/>
+    <img class="col-10 center" alt="Picture of CART" src="images/Cart picture for about me.jpg"/>
 
     <p>
         
