--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -22,15 +22,15 @@
 
     <h1>How to contact me</h1>
 
-    <img class="col-12" alt="picture of phone" src="images/contact me for contact me.jpeg"/>
+    <img class="col-10 center" alt="picture of phone" src="images/contact me for contact me.jpeg"/>
 
     
     <p>Thank you for taking the time to check out my Personal Portfolio website and I am glad that you want to contact me to figure out more things about me.</p>
 
     <p>Please contact me via email, phone, or linkedin
-    Email: Sean_michael_smith@hotmail.com
-    Phone: 209-627-9840
-    Linkedin: cannot sign in
+    <br>Email: Sean_michael_smith@hotmail.com</br>
+    <br>Phone: 209-627-9840</br>
+    <br>Linkedin: https://www.linkedin.com/in/seansmithcart/</br>
     </p>
 
 </body>
