--- a/Four_Year_Plan.html
+++ b/Four_Year_Plan.html
@@ -22,7 +22,7 @@
 
     <h1>Hello and welcome to my four year plan</h1>
 
-    <img class="col-12" alt="Fresno State Sign" src="images/Fresno state for four year plan.jpg"/>
+    <img class="col-10 center" alt="Fresno State Sign" src="images/Fresno state for four year plan.jpg"/>
 
     
     <p>
