--- a/Letter_Of_Recommendation.html
+++ b/Letter_Of_Recommendation.html
@@ -19,11 +19,10 @@
         <li><a href="Resume.html">Resume</a></li>
         <li><a href="Contact_Me.html">Contact Me</a></li>
     </ul>
-
-    <img class="col-12" alt="Placeholder" src="placeholder"/>
-
     
     <h1>My letter of recommendation</h1>
+
+    <img class="col-10 center" alt="Placeholder" src="placeholder"/>
 
     <p>N/A right now I am working on getting the letter</p>
 
