--- a/Link_To_Digital_File.html
+++ b/Link_To_Digital_File.html
@@ -20,14 +20,14 @@
         <li><a href="Contact_Me.html">Contact Me</a></li>
     </ul>
  
-    <img class="col-12" alt="placeholder" src="placeholder"/>
+    <img class="col-10 center" alt="file" src="images/File for link to digital file.jpg"/>
 
     
     <h1>My digital file</h1>
 
-    <p>FILE</p>
+    <p>https://github.com/KyoS3AN/Personal_Portfolio_Website</p>
 
-    <p>How to enter the file: </p>
+    <p>Go to the link and press on the clone or download button to get the files so you can see how the website was created</p>
 
 </body>
 </html>
