--- a/Resume.html
+++ b/Resume.html
@@ -22,7 +22,7 @@
 
     <h1>Resume</h1>
 
-    <img class="col-12" alt="Resume" src="images/handing over a resume for resume.jpeg"/>
+    <img class="col-10 center" alt="Resume" src="images/handing over a resume for resume.jpeg"/>
 
     
     <p>Sean Smith
