--- a/Letter_Of_Recommendation.html
+++ b/Letter_Of_Recommendation.html
@@ -22,9 +22,9 @@
     
     <h1>My letter of recommendation</h1>
 
-    <img class="col-10 center" alt="Placeholder" src="placeholder"/>
+    <img class="col-10 center" alt="letter of recommendation" src="images/Letter.PNG"/>
 
-    <p>N/A right now I am working on getting the letter</p>
+    <p></p>
 
 </body>
 </html>
